--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,11 @@
   @tailwind components;
   @tailwind utilities;
 
-  @layer components {}
+  @layer components {
+    .i-sm {
+      @apply h-[0.8rem] w-[0.8rem]
+    }
+  }
 
   @layer base {
     :root {
@@ -47,8 +51,8 @@
       --popover: 240 10% 3.9%;
       --popover-foreground: 0 0% 98%;
 
-      --primary: 0 0% 98%;
-      --primary-foreground: 240 5.9% 10%;
+      --primary: 243, 90%, 61%;
+      --primary-foreground: 243 0% 93%;
 
       --secondary: 240 3.7% 15.9%;
       --secondary-foreground: 0 0% 98%;
